; ModuleID = '/home/carl/AnghaBench/esp-idf/components/app_trace/sys_view/SEGGER/extr_SEGGER_SYSVIEW.c__TrySendOverflowPacket.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/app_trace/sys_view/SEGGER/extr_SEGGER_SYSVIEW.c__TrySendOverflowPacket.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i8*, i8*, i32 }

@SYSVIEW_EVTID_OVERFLOW = common dso_local global i32 0, align 4
@_SYSVIEW_Globals = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@CHANNEL_ID_UP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @_TrySendOverflowPacket to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @_TrySendOverflowPacket() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca [11 x i32], align 16
  %5 = alloca i32*, align 8
  %6 = load i32, i32* @SYSVIEW_EVTID_OVERFLOW, align 4
  %7 = getelementptr inbounds [11 x i32], [11 x i32]* %4, i64 0, i64 0
  store i32 %6, i32* %7, align 16
  %8 = getelementptr inbounds [11 x i32], [11 x i32]* %4, i64 0, i64 1
  store i32* %8, i32** %5, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = load i8*, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @_SYSVIEW_Globals, i32 0, i32 1), align 8
  %11 = call i32 @ENCODE_U32(i32* %9, i8* %10)
  %12 = call i8* (...) @SEGGER_SYSVIEW_GET_TIMESTAMP()
  store i8* %12, i8** %1, align 8
  %13 = load i8*, i8** %1, align 8
  %14 = load i8*, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @_SYSVIEW_Globals, i32 0, i32 0), align 8
  %15 = ptrtoint i8* %13 to i64
  %16 = ptrtoint i8* %14 to i64
  %17 = sub i64 %15, %16
  %18 = inttoptr i64 %17 to i8*
  store i8* %18, i8** %2, align 8
  %19 = load i8*, i8** %2, align 8
  %20 = call i32 @MAKE_DELTA_32BIT(i8* %19)
  %21 = load i32*, i32** %5, align 8
  %22 = load i8*, i8** %2, align 8
  %23 = call i32 @ENCODE_U32(i32* %21, i8* %22)
  %24 = load i32, i32* @CHANNEL_ID_UP, align 4
  %25 = getelementptr inbounds [11 x i32], [11 x i32]* %4, i64 0, i64 0
  %26 = load i32*, i32** %5, align 8
  %27 = getelementptr inbounds [11 x i32], [11 x i32]* %4, i64 0, i64 0
  %28 = ptrtoint i32* %26 to i64
  %29 = ptrtoint i32* %27 to i64
  %30 = sub i64 %28, %29
  %31 = sdiv exact i64 %30, 4
  %32 = trunc i64 %31 to i32
  %33 = call i32 @SEGGER_RTT_WriteSkipNoLock(i32 %24, i32* %25, i32 %32)
  store i32 %33, i32* %3, align 4
  %34 = load i32, i32* %3, align 4
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %36, label %40

36:                                               ; preds = %0
  %37 = load i8*, i8** %1, align 8
  store i8* %37, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @_SYSVIEW_Globals, i32 0, i32 0), align 8
  %38 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @_SYSVIEW_Globals, i32 0, i32 2), align 8
  %39 = add nsw i32 %38, -1
  store i32 %39, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @_SYSVIEW_Globals, i32 0, i32 2), align 8
  br label %43

40:                                               ; preds = %0
  %41 = load i8*, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @_SYSVIEW_Globals, i32 0, i32 1), align 8
  %42 = getelementptr inbounds i8, i8* %41, i32 1
  store i8* %42, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @_SYSVIEW_Globals, i32 0, i32 1), align 8
  br label %43

43:                                               ; preds = %40, %36
  %44 = load i32, i32* %3, align 4
  ret i32 %44
}

declare dso_local i32 @ENCODE_U32(i32*, i8*) #1

declare dso_local i8* @SEGGER_SYSVIEW_GET_TIMESTAMP(...) #1

declare dso_local i32 @MAKE_DELTA_32BIT(i8*) #1

declare dso_local i32 @SEGGER_RTT_WriteSkipNoLock(i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
